--- a/styles/components/_apartment.scss
+++ b/styles/components/_apartment.scss
@@ -58,7 +58,7 @@
         select {
             font-family: $second-font;
             font-size: 18px;
-            font-weight: $font-weight-base;
+            font-weight: $font-weight-bold;
             background-color: transparent;
             color: $color-gray;
             width: calc(100% + 16px);
