--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,6 +22,7 @@
 @import "components/contacts-content";
 @import "components/sales-department";
 @import "components/select";
+@import "components/similar";
 @import "components/news-content";
 @import "components/show-more";
 @import "components/ipoteka";
