--- a/styles/components/_advantages.scss
+++ b/styles/components/_advantages.scss
@@ -18,6 +18,24 @@
         margin-top: 0;
     }
 
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100px;
+    }
+
+    &::before {
+        background: linear-gradient(180deg, #F4F6F9 50%, rgba(0, 0, 0, 0) 100%);
+        top: 0;
+    }
+
+    &::after {
+        background: linear-gradient(0deg, #F4F6F9 50%, rgba(0, 0, 0, 0) 100%);
+        bottom: 0;
+    }
+
     &__title {
         font-size: 100px;
         line-height: 80px;
