--- a/styles/style.css
+++ b/styles/style.css
@@ -598,11 +598,11 @@ h1.section-title, .h1 {
 }
 
 .nav-chain {
-  margin: 150px 8.5% 35px;
+  margin: 150px 8.5% 0;
 }
 @media screen and (max-width: 1169px) {
   .nav-chain {
-    margin: 150px 10px 25px;
+    margin: 150px 10px 0;
   }
 }
 @media screen and (max-width: 999px) {
@@ -1287,6 +1287,20 @@ h1.section-title, .h1 {
     height: 476px;
     margin-top: 0;
   }
+}
+.advantages::before, .advantages::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100px;
+}
+.advantages::before {
+  background: linear-gradient(180deg, #F4F6F9 50%, rgba(0, 0, 0, 0) 100%);
+  top: 0;
+}
+.advantages::after {
+  background: linear-gradient(0deg, #F4F6F9 50%, rgba(0, 0, 0, 0) 100%);
+  bottom: 0;
 }
 .advantages__title {
   font-size: 100px;
@@ -3249,7 +3263,7 @@ h1.section-title, .h1 {
 .apartment__select select {
   font-family: "Gilroy", Arial, sans-serif;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 700;
   background-color: transparent;
   color: #44565D;
   width: calc(100% + 16px);
@@ -3861,12 +3875,12 @@ h1.section-title, .h1 {
 .calc-ipoteka {
   position: relative;
   width: 83%;
-  margin: 0 auto 175px;
+  margin: 0 auto;
 }
 @media screen and (max-width: 749px) {
   .calc-ipoteka {
     width: calc(100% - 26px);
-    margin: 25px 13px 175px;
+    margin: 25px 13px 0;
   }
 }
 .calc-ipoteka__wrap {
@@ -3874,7 +3888,7 @@ h1.section-title, .h1 {
   justify-content: space-between;
   align-items: center;
   height: 531px;
-  margin-top: 100px;
+  margin-top: 45px;
   border-radius: 87px;
   border: 1px solid #DEE7EE;
 }
@@ -4979,19 +4993,19 @@ h1.section-title, .h1 {
   transition: all 0.1s linear;
   stroke: #5F9FC0;
 }
-.select-apartment__content.select-apartment__content__list .select-apartment__card__price, .select-apartment__content.select-apartment__content__list .select-apartment__card__place {
+.select-apartment__content.select-apartment__content__list .select-apartment__card__price-box, .select-apartment__content.select-apartment__content__list .select-apartment__card__place-box {
   display: flex;
   flex-direction: column;
   width: 50%;
 }
 @media screen and (max-width: 749px) {
-  .select-apartment__content.select-apartment__content__list .select-apartment__card__price, .select-apartment__content.select-apartment__content__list .select-apartment__card__place {
+  .select-apartment__content.select-apartment__content__list .select-apartment__card__price-box, .select-apartment__content.select-apartment__content__list .select-apartment__card__place-box {
     width: auto;
   }
 }
 .select-apartment__content.select-apartment__content__list .select-apartment__card__price-box {
   border-right: 1px #CADAE4 solid;
-  padding-right: 9.4%;
+  padding-right: 16.6%;
 }
 @media screen and (max-width: 999px) {
   .select-apartment__content.select-apartment__content__list .select-apartment__card__price-box {
@@ -5042,7 +5056,7 @@ h1.section-title, .h1 {
 .select-apartment__content.select-apartment__content__list .select-apartment__card__place-box {
   justify-content: space-between;
   box-sizing: border-box;
-  padding: 0 0 0 9.4%;
+  padding: 0 0 0 16.6%;
   height: auto;
 }
 @media screen and (max-width: 999px) {
@@ -5103,6 +5117,20 @@ h1.section-title, .h1 {
   .section-box {
     width: calc(100% - 20px);
     margin: 0 10px;
+  }
+}
+
+@media screen and (max-width: 999px) {
+  .similar {
+    margin-top: 50px;
+  }
+}
+.similar__content {
+  margin-top: 57px;
+}
+@media screen and (max-width: 999px) {
+  .similar__content {
+    margin-top: 20px;
   }
 }
 
